--- a/m1/s1/g2/esercizio/index.html
+++ b/m1/s1/g2/esercizio/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <img src="img/logo.svg" alt="Logo">
-        <h1>Epicode - Il blog dei developers</h1>
+        <p>Epicode - Il blog dei developers</p>
         <nav>
             <a href="#">Home</a>
             <a href="#">Articoli</a>
@@ -36,7 +36,8 @@
     </header>
     <main>
         <section id="post">
-            <h2>Come creare un template per i post di Mario Rossi - pubblicato il 25/10/2020</h2>
+            <h1>Come creare un template per i post</h1>
+            <p>di Mario Rossi - pubblicato il 25/10/2020</p>
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da
                 applicare a
                 tutte le pagine.</p>
