--- a/m1/s1/g2/esercizio/index.html
+++ b/m1/s1/g2/esercizio/index.html
@@ -31,6 +31,8 @@
         #correlati>div{
             flex:1;
             text-align: center;
+            background:#00D9DA;
+            border:2px solid #FF2751;
         }
     </style>
 </head>
@@ -133,17 +135,17 @@
         <h2>Articoli correlati</h2>
         <section id="correlati">
             <div id="correlato1">
-                <h3>Validare il codice HTML</h3>
+                <a href="#"><h3>Validare il codice HTML</h3></a>
                 <p>Categoria: develop</p>
                 <p>Data: 16/09/2020</p>
             </div>
             <div id="correlato2">
-                <h3>Correggere la sintassi</h3>
+                <a href="#"><h3>Correggere la sintassi</h3></a>
                 <p>Categoria: develop</p>
                 <p>Data: 18/09/2020</p>
             </div>
             <div id="correlato3">
-                <h3>Meno kb nella pagina</h3>
+                <a href="#"><h3>Meno kb nella pagina</h3></a>
                 <p>Categoria: ottimizzazione</p>
                 <p>Data: 30/09/2020</p>
             </div>
