--- a/m1/s1/g2/esercizio/index.html
+++ b/m1/s1/g2/esercizio/index.html
@@ -125,7 +125,7 @@
             <form action="iscriviti">
                 <label for="email">Inserisci la tua e-mail:</label>
                 <br>
-                <input type="email" name="email" id="email" required>
+                <input type="email" name="email" id="email" placeholder="E-mail" required>
                 <br>
                 <input type="submit" value="Iscriviti!">
             </form>
