modifica in header colore paragrafo

--- a/m1/s1/g3/esercizio/index.html
+++ b/m1/s1/g3/esercizio/index.html
@@ -21,7 +21,7 @@
             <img src="img/logo.png" alt="Logo" width="250">
         </div>
         <div id="frase">
-            <p>Part of <strong>A SIMPLYM FABOLOUS THANKSGIVING</strong></p>
+            <p id="special">Part of <strong>A SIMPLYM FABOLOUS THANKSGIVING</strong></p>
         </div>
     </header>
     <main>
