--- a/m1/s1/g4/esercizio-personale/index.html
+++ b/m1/s1/g4/esercizio-personale/index.html
@@ -98,14 +98,59 @@
                     </tbody>
                 </table>
             </div>
-            <p>Un test di validazione potrà essere fatto tramite il <a href="#" target="_blank" class="colore-azzurro">tool online</a> dedicato
-            allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei
-            veri developers come loro:</p>
-            <iframe src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            <p>Un test di validazione potrà essere fatto tramite il <a href="#" target="_blank"
+                    class="colore-azzurro">tool online</a> dedicato
+                allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei
+                veri developers come loro:</p>
+            <iframe src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <section class="background-grigio">
+                <h2>Novità</h2>
+                <div id="form-novita">
+                    <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
+                    <form method="POST" action="elabora_form.php">
+                        <fieldset>
+                            <input type="email" name="user_email" id="user_email" placeholder="inserisci l'email"
+                                required>
+                            <button type="submit">Iscriviti!</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </section>
+
+            <aside>
+                <h2>ARTICOLI CORRELATI</h2>
+                <div class="background-grigio correlati">
+                    <div class="contenuto-correlati">
+                        <a href="post2.html" title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice HTML</a>
+                        <p>Categoria: develop</p>
+                        <p>Data: 18-9-2020</p>
+                    </div>
+                </div>
+    
+                <div class="background-grigio correlati">
+                    <div class="contenuto-correlati">
+                        <a href="post3.html" title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la sintassi</a>
+                        <p>Categoria: develop</p>
+                        <p>Data: 16-9-2020</p>
+                    </div>    
+                </div>
+    
+                <div class="background-grigio correlati">
+                    <div class="contenuto-correlati">
+                        <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella pagina</a>
+                        <p>Categoria: ottimizzazione</p>
+                        <p>Data: 30-9-2020</p>
+                    </div>    
+                </div>
+            </aside>
+
         </article>
     </main>
     <footer>
-
+        <p>Blog Epicode &copy;2021</p>
+        <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="mailto:info@epicode.school" title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
     </footer>
 </body>
 
