aggiunta class="data-right" allineamento a destra per le date

--- a/m1/s1/g4/esercizio-personale/index.html
+++ b/m1/s1/g4/esercizio-personale/index.html
@@ -125,7 +125,7 @@
                     <div class="contenuto-correlati">
                         <a href="post2.html" title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice HTML</a>
                         <p>Categoria: develop</p>
-                        <p>Data: 18-9-2020</p>
+                        <p class="data-right">Data: 18-9-2020</p>
                     </div>
                 </div>
     
@@ -133,7 +133,7 @@
                     <div class="contenuto-correlati">
                         <a href="post3.html" title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la sintassi</a>
                         <p>Categoria: develop</p>
-                        <p>Data: 16-9-2020</p>
+                        <p class="data-right">Data: 16-9-2020</p>
                     </div>    
                 </div>
     
@@ -141,7 +141,7 @@
                     <div class="contenuto-correlati">
                         <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella pagina</a>
                         <p>Categoria: ottimizzazione</p>
-                        <p>Data: 30-9-2020</p>
+                        <p class="data-right">Data: 30-9-2020</p>
                     </div>    
                 </div>
             </aside>
