aggiunti css font-awesome aggiornati e aggiunte icone

--- a/m1/s1/g4/esercizio-personale/index.html
+++ b/m1/s1/g4/esercizio-personale/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- CSS Font-Awesome -->
     <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="css/brands.css">
+    <link rel="stylesheet" href="css/solid.css">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +43,7 @@
     <main>
         <article>
             <h1>Come creare un template per i post</h1>
-            <p id="crediti">di Mario Rossi - pubblicato il 25-10-2020</p>
+            <p id="crediti"><i class="fa-solid fa-square-pen"></i>di Mario Rossi - <i class="fa-solid fa-clock"></i>pubblicato il 25-10-2020</p>
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong
                     class="colore-viola">parti comuni</strong> da applicare a tutte le pagine</p>
             <p>Le varie aree saranno quindi suddivise in:</p>
@@ -124,24 +127,24 @@
                 <div class="background-grigio correlati">
                     <div class="contenuto-correlati">
                         <a href="post2.html" title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice HTML</a>
-                        <p>Categoria: develop</p>
-                        <p class="data-right">Data: 18-9-2020</p>
+                        <p><i class="fa-sharp fa-solid fa-tag"></i>Categoria: develop</p>
+                        <p class="data-right"><i class="fa-solid fa-calendar-days"></i>Data: 18-9-2020</p>
                     </div>
                 </div>
     
                 <div class="background-grigio correlati">
                     <div class="contenuto-correlati">
                         <a href="post3.html" title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la sintassi</a>
-                        <p>Categoria: develop</p>
-                        <p class="data-right">Data: 16-9-2020</p>
+                        <p><i class="fa-sharp fa-solid fa-tag"></i>Categoria: develop</p>
+                        <p class="data-right"><i class="fa-solid fa-calendar-days"></i>Data: 16-9-2020</p>
                     </div>    
                 </div>
     
                 <div class="background-grigio correlati">
                     <div class="contenuto-correlati">
                         <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella pagina</a>
-                        <p>Categoria: ottimizzazione</p>
-                        <p class="data-right">Data: 30-9-2020</p>
+                        <p><i class="fa-sharp fa-solid fa-tag"></i>Categoria: ottimizzazione</p>
+                        <p class="data-right"><i class="fa-solid fa-calendar-days"></i>Data: 30-9-2020</p>
                     </div>    
                 </div>
             </aside>
