implementate sezioni main e aside (ancora da terminare)

--- a/m1/s1/g5/progetto/desktop-responsive/index.html
+++ b/m1/s1/g5/progetto/desktop-responsive/index.html
@@ -28,10 +28,71 @@
         <img src="images/logo.png" alt="Logo Epicode" width="125">
     </header>
     <main>
-
+        <section id="principale" class="center">
+            <div id="intestazione">
+                <h1 class="colore-azzurro">Corso Web Developer</h1>
+                <p class="center">Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti voglio arrichire il CV, tu
+                pensa ad arricchire le tue competenze.</p>
+                <div id="link-principale" class="bg-arancione">
+                    <a href="#" class="colore-bianco">PARTIAMO!</a>
+                </div>
+            </div>    
+        </section>
+        <section id="dettaglio-desktop">
+            <div id="img-dettaglio">
+                <img src="images/notebook.jpg" alt="Tools">
+            </div>
+            <div id="dettagli-box">
+                <div class="dettagli">
+                    <h2 class="colore-azzurro">Scegli il tuo ruolo</h2>
+                    <p>Potrai scegliere se essere Azienda,Freelance o Startup</p>
+                </div>
+                <div class="dettagli">
+                    <h2 class="colore-azzurro">Lavora dove vuoi</h2>
+                    <p>Lavora da casa, in riva al mare o in montagna.</p>
+                </div>
+                <div class="dettagli">
+                    <h2 class="colore-azzurro">Scegli il tuo ruolo</h2>
+                    <p>Potrai scegliere se essere Azienda,Freelance o Startup</p>
+                </div>
+                <div class="dettagli">
+                    <h2 class="colore-azzurro">Lavoro in libertà</h2>
+                    <p>Non serve lavorare in ufficio per essere creatore di prodotti digitali</p>
+                </div>
+            </div>
+        </section>
+        <section id="banner">
+            <div id="banner" class="bg-arancione">
+                <h2 class="colore-bianco center"><strong>Epicode garantisce</strong></h2>
+                <p class="colore-bianco center"><em>"3 mesi intensivi di corso che cambieranno radicalmente la tua
+                        vita"</em></p>
+                <p class="colore-bianco center" id="ceo">Mario Rossi</p>
+                <p class="colore-bianco center" id="p-no-padding">Ceo, Epicode</p>
+            </div>
+        </section>
     </main>
     <aside>
-
+        <div class="vantaggi">
+            <div class="img-vantaggi">
+                <img src="images/foto1.jpg" alt="Computer">
+            </div>
+            <h3 class="colore-azzurro center">Il tuo pc</h3>
+            <p class="center">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
+        </div>
+        <div class="vantaggi">
+            <div class="img-vantaggi">
+                <img src="images/foto2.jpg" alt="Computer">
+            </div>
+            <h3 class="colore-azzurro center">Impara ora</h3>
+            <p class="center">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+        </div>
+        <div class="vantaggi">
+            <div class="img-vantaggi">
+                <img src="images/foto3.jpg" alt="Computer-Light">
+            </div>
+            <h3 class="colore-azzurro center">Lavora subito</h3>
+            <p class="center">Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>
+        </div>
     </aside>
     <footer>
 
