--- a/m1/s1/g5/progetto/desktop-responsive/index.html
+++ b/m1/s1/g5/progetto/desktop-responsive/index.html
@@ -62,7 +62,7 @@
             </div>
         </section>
         <section id="banner">
-            <div id="banner" class="bg-arancione">
+            <div class="bg-arancione">
                 <h2 class="colore-bianco center"><strong>Epicode garantisce</strong></h2>
                 <p class="colore-bianco center"><em>"3 mesi intensivi di corso che cambieranno radicalmente la tua
                         vita"</em></p>
@@ -81,21 +81,31 @@
         </div>
         <div class="vantaggi">
             <div class="img-vantaggi">
-                <img src="images/foto2.jpg" alt="Computer">
+                <img src="images/foto1.jpg" alt="Computer">
             </div>
             <h3 class="colore-azzurro center">Impara ora</h3>
-            <p class="center">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+            <!--<p class="center">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>-->
+            <p class="center">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
         <div class="vantaggi">
             <div class="img-vantaggi">
-                <img src="images/foto3.jpg" alt="Computer-Light">
+                <img src="images/foto1.jpg" alt="Computer-Light">
             </div>
             <h3 class="colore-azzurro center">Lavora subito</h3>
-            <p class="center">Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>
+            <!--<p class="center">Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>-->
+            <p class="center">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
     </aside>
-    <footer>
-
+    <footer class="bg-azzurro colore-bianco center">
+        <p class="strong">Contattaci</p>
+        <div id="contatti">
+            <a href="tel:+3911223456" class="colore-bianco"><i class="fa-sharp fa-solid fa-square-phone"></i>(+39)11223456</a>
+            <a href="mailto:info@epicode.school" class="colore-bianco"><i class="fa-solid fa-square-envelope"></i>info@epicode.school</a>
+            <address><i class="fa-solid fa-square-up-right"></i>Via Appia 1 - 00100 Roma (RM)</address>
+            <div class="horizontal-line">
+            </div>
+            <p>&#169; 2023. Immagini di <a href="#" class="colore-bianco">Pixabay</a>.</p>
+        </div>
     </footer>
 </body>
 
