--- a/m1/s1/g5/progetto/mobile/index.html
+++ b/m1/s1/g5/progetto/mobile/index.html
@@ -91,13 +91,13 @@
     </aside>
     <footer class="bg-azzurro colore-bianco center">
         <p class="strong">Contattaci</p>
-        <div id="contatti"></div>
-        <a href="tel:+3911223456" class="colore-bianco"><i class="fa-sharp fa-solid fa-square-phone"></i>(+39)11223456</a>
-        <a href="mailto:info@epicode.school" class="colore-bianco"><i class="fa-solid fa-square-envelope"></i>info@epicode.school</a>
-        <address><i class="fa-solid fa-square-up-right"></i>Via Appia 1 - 00100 Roma (RM)</address>
-        <div class="horizontal-line">
-        </div>
-        <p>&#169; 2023. Immagini di <a href="#" class="colore-bianco">Pixabay</a>.</p>
+        <div id="contatti">
+            <a href="tel:+3911223456" class="colore-bianco"><i class="fa-sharp fa-solid fa-square-phone"></i>(+39)11223456</a>
+            <a href="mailto:info@epicode.school" class="colore-bianco"><i class="fa-solid fa-square-envelope"></i>info@epicode.school</a>
+            <address><i class="fa-solid fa-square-up-right"></i>Via Appia 1 - 00100 Roma (RM)</address>
+            <div class="horizontal-line">
+            </div>
+            <p>&#169; 2023. Immagini di <a href="#" class="colore-bianco">Pixabay</a>.</p>
         </div>
     </footer>
 </body>
