implementazione regole css footer

--- a/m1/s1/g5/progetto/desktop-responsive/index.html
+++ b/m1/s1/g5/progetto/desktop-responsive/index.html
@@ -96,7 +96,7 @@
             <p class="center">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
     </aside>
-    <footer class="bg-azzurro colore-bianco center">
+    <footer class="bg-azzurro colore-bianco">
         <p class="strong">Contattaci</p>
         <div id="contatti">
             <a href="tel:+3911223456" class="colore-bianco"><i class="fa-sharp fa-solid fa-square-phone"></i>(+39)11223456</a>
