--- a/m1/s2/g4/do-while/index.html
+++ b/m1/s2/g4/do-while/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>Do While</h1>
-    <div id="numeri" onclick="stampaNumeri(i)"></div>
+    <div id="numeri"></div>
     <script>
 
         let i = 0;
