--- a/m1/s2/g4/do-while/index.html
+++ b/m1/s2/g4/do-while/index.html
@@ -16,9 +16,9 @@
 
         let i = 0;
         do{
-            document.getElementById("numeri").innerHTML = "<b>" + i + "</b>";
+            document.getElementById("numeri").innerHTML += "<div>" + i + "</div>";
             i++;
-        }while (i >= 10) 
+        }while (i <= 10) 
     
     </script>
 </body>
