--- a/m1/s2/g4/ciclo-for/index.html
+++ b/m1/s2/g4/ciclo-for/index.html
@@ -7,6 +7,18 @@
     <title>Ciclo For</title>
 </head>
 <body>
+    <style>
+        div#pizze{
+            background: black;
+            color:red;
+            font-weight: bold;
+            width: 400px;
+            /*height: 100px;*/
+        }
+        div#pizze > div{
+            padding:1rem;
+        }
+    </style>
     <h1>Ciclo For</h1>
     <div id="numeri"></div>
     <div id="pizze"></div>
