aggiunto commento sul for e utilizzo iterazione array

--- a/m1/s2/g4/ciclo-for/index.html
+++ b/m1/s2/g4/ciclo-for/index.html
@@ -28,7 +28,7 @@
             document.getElementById("numeri").innerHTML+="<div>"+i+"</div>";
         }*/
         
-        //iterazione sugli array
+        //iterazione sugli array - anche se non è consigliabile ci sono il for of e il for each
 
         let pizze = ['Margherita','Diavola','Greca','Mimosa'];
         for(i=0;i<pizze.length;i++){
