--- a/m1/s2/g5/progetto/index.html
+++ b/m1/s2/g5/progetto/index.html
@@ -24,7 +24,7 @@
                     <button class="btn" data-simbolo="4" onclick="aggiungiSimbolo(this)">4</button>
                     <button class="btn" data-simbolo="5" onclick="aggiungiSimbolo(this)">5</button>
                     <button class="btn" data-simbolo="6" onclick="aggiungiSimbolo(this)">6</button>
-                    <button class="btn" data-simbolo="*" onclick="aggiungiSimbolo(this)">X</button>
+                    <button class="btn" data-simbolo="X" onclick="aggiungiSimbolo(this)">X</button>
                 </div>
                 <div class="riga">
                     <button class="btn" data-simbolo="1" onclick="aggiungiSimbolo(this)">1</button>
