--- a/m1/s2/g5/progetto/index.html
+++ b/m1/s2/g5/progetto/index.html
@@ -38,6 +38,12 @@
                     <button class="btn" data-simbolo="." onclick="aggiungiSimbolo(this)">.</button>
                     <button class="btn" data-simbolo="+" onclick="aggiungiSimbolo(this)">+</button>
                 </div>
+                <div class="riga">
+                    <button class="btn" data-simbolo="^" onclick="aggiungiSimbolo(this)">x^2</button>
+                    <button class="btn" data-simbolo="√" onclick="aggiungiSimbolo(this)">√</button>
+                    <button class="btn" data-simbolo="π" onclick="aggiungiSimbolo(this)">π</button>
+                    <button class="btn" disabled></button>
+                </div>
             </div>
             <div id="uguale">
                 <button class="btn" id="totale" data-simbolo="=" onclick="totale()">=</button>
