--- a/m2/s2/g2/esercizio/index.html
+++ b/m2/s2/g2/esercizio/index.html
@@ -18,6 +18,15 @@
         html {
             scroll-behavior: smooth;
         }
+
+        .img-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .badge {
+            font-size: 12px;
+        }
     </style>
     <!-- navbar -->
     <nav class="navbar navbar-expand-xl bg-body-tertiary px-5">
@@ -200,7 +209,13 @@
                 <div class="row gy-4">
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">Hot</span>-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -210,7 +225,12 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -220,7 +240,12 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -230,7 +255,12 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -240,7 +270,12 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -250,7 +285,12 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
+                            <div class="img-container">
+                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                                <span
+                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
