modifiche in esericizio

--- a/m2/s2/g2/esercizio/index.html
+++ b/m2/s2/g2/esercizio/index.html
@@ -19,14 +19,10 @@
             scroll-behavior: smooth;
         }
 
-        .img-container {
+        /*.img-container {
             position: relative;
             display: inline-block;
-        }
-
-        .badge {
-            font-size: 12px;
-        }
+        }*/
     </style>
     <!-- navbar -->
     <nav class="navbar navbar-expand-xl bg-body-tertiary px-5">
@@ -209,13 +205,8 @@
                 <div class="row gy-4">
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                            <span class="badge bg-secondary position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">Hot</span>-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -225,12 +216,8 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -240,12 +227,8 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -255,12 +238,8 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -270,12 +249,8 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
@@ -285,12 +260,8 @@
                     </div>
                     <div class="col-6 col-lg-4">
                         <div class="card shadow-lg">
-                            <!--<img src="img/1.jpg" class="card-img-top" alt="Destinazione">-->
-                            <div class="img-container">
-                                <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
-                                <span
-                                    class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
-                            </div>
+                            <img src="img/1.jpg" class="card-img-top" alt="Destinazione">
+                            <span class="badge bg-secondary position-absolute top-0 end-0 p-2 bg-danger border border-light">Hot</span>
                             <div class="card-body">
                                 <h5 class="card-title">Titolo</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet.</p>
