--- a/m2/s2/g4/teoria/index.html
+++ b/m2/s2/g4/teoria/index.html
@@ -31,7 +31,7 @@
                             aria-expanded="false">
                             Dropdown
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
